<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardCornerRadius="13dp"
        app:cardBackgroundColor="@color/background"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/are_you_ready"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"

                android:fontFamily="@font/nunito_sans_regular"
                android:text="@string/are_you_excited_to_start_workout_feel_the_energy_inside_you_focus_on_your_today_s_goal_visualise_your_dream_body_and_lets_start"
                android:textColor="#bbbdbc"
                android:textSize="13sp" />

            <Button
                android:id="@+id/ready_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg"

                android:fontFamily="@font/nunito_sans_regular"
                android:text="@string/yes_i_am_ready"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg"
                app:backgroundTint="#747675"

                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:text="@string/no_hold_on"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>